[package]
name = "lost-metrics-store"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rusqlite = { version = "0.34.0", features = ["bundled", "serde_json"] }
r2d2_sqlite = "0.27.0"
r2d2 = "0.8.10"
log = "0.4.26"
anyhow = "1.0.97"
hashbrown = { version = "0.15.0", features = ["serde"] }
chrono = "0.4.31"
lost-metrics-core = { git = "https://github.com/averageeucplayer/lost-metrics-core", branch="main" }
lost-metrics-misc = { git = "https://github.com/averageeucplayer/lost-metrics-misc", branch="main" }
# lost-metrics-core = { path= "../lost-metrics-core" }
# lost-metrics-misc = { path= "../lost-metrics-misc" }

[dev-dependencies]
mockall = "0.13.1"